# fix-canon-name

./: README.md  pyproject.toml
src/fix_canon_name/: app.tcss  basic_script.py  tui.py
