[tool.poetry]
name = "fix-canon-name"
version = "0.1.0"
description = ""
authors = ["David Fokkema <davidfokkema@icloud.com>"]
readme = "README.md"
packages = [{include = "fix_canon_name", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.16.0"
textual = "^0.47.1"
zeroconf = "^0.131.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
textual-dev = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
